--- a/Jeux_E5/Properties/Resources.resx
+++ b/Jeux_E5/Properties/Resources.resx
@@ -136,7 +136,19 @@
   <data name="victory_fanfare_hd" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\victory-fanfare-hd.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="_207000106_Dead" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\207000106 Dead.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="_207000106_Win_Before" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\207000106 Win Before.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_306001304_Dying" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\306001304 Dying.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_306001304_Win" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\306001304 Win.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="death_sound_effect" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\death-sound-effect.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
 </root>
