--- a/Jeux_E5/Properties/Resources.resx
+++ b/Jeux_E5/Properties/Resources.resx
@@ -151,7 +151,7 @@
   <data name="646a5645d72ad40dbc18fcfcebb2ff03-700x400" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\646a5645d72ad40dbc18fcfcebb2ff03-700x400.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="logo portfolio" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\logo portfolio.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
